<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Breadcrumbs</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="newstring">new</string>
    <string name="draw">draw path</string>
    <string name="startlocation">start L</string>
    <string name="stoplocation">stop L</string>
    <string name="picture">picture</string>
    <string name="note">note</string>
    <string name="deleteall">delete</string>
    <string name="adddebug">add debug</string>
    <string name="save">save</string>
    <string name="focus">focus</string>
    <string name="desc" />
    <string name="title_activity_load">Load Route</string>
	<string name="load">load</string>
	<string name="album_name">BreadCrumbs</string>
	<string name="resume">Resume</string>
	<string name="record_route">Record Route</string>
	<string name="navigate">Navigate</string>
</resources>