<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Single menu item
         Set id, icon and Title for each menu item
    -->
     
	<item 	android:id="@+id/focus_btn"
	       	android:icon="@drawable/rsz_cross1"
	      	android:title="@string/focus"
	      	android:showAsAction="always"/>

	<item 	android:id="@+id/new_btn"
   			android:icon="@drawable/rsz_new"
       		android:title="@string/newstring"/>
	
	<item 	android:id="@+id/save_btn"
   			android:icon="@drawable/rsz_save42"
       		android:title="@string/save"/>
	
	<item 	android:id="@+id/picture_btn"
   			android:icon="@drawable/rsz_camera"
       		android:title="@string/picture"/>
	
	<item 	android:id="@+id/note_btn"
   			android:icon="@drawable/rsz_note40"
       		android:title="@string/note"/>
    
</menu>